package Observer.CA5;

public interface TaiKhoanATM {
    boolean KiemTraSoDu(double soDu);
    void nhanThongBao(double soTien, boolean trangThai);
}
